[gd_scene load_steps=12 format=4 uid="uid://6o1grjf0rtai"]

[ext_resource type="Script" uid="uid://cjjqy7eeifo1n" path="res://scripts/Chapter1/chap1_room_scripts.gd" id="1_mnlv7"]
[ext_resource type="Texture2D" uid="uid://cvm1xsprhoww8" path="res://assets/sprites/prototype graphics.svg" id="1_ogsup"]
[ext_resource type="PackedScene" uid="uid://cfqff4kheixm" path="res://scene/Player_scene/area_2d_camera_room.tscn" id="2_5xyui"]
[ext_resource type="Texture2D" uid="uid://c17lu264e832b" path="res://icon.svg" id="3_y6kgj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mnlv7"]
texture = ExtResource("1_ogsup")
texture_region_size = Vector2i(17, 17)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_y6kgj"]
tile_size = Vector2i(17, 17)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mnlv7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnlv7"]
size = Vector2(51.2001, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iitqo"]
size = Vector2(51.2001, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s558"]
size = Vector2(320, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjr4h"]
size = Vector2(255, 255.349)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tt6n"]
size = Vector2(128, 128.25)

[node name="Level1_roomB" type="Node2D"]
script = ExtResource("1_mnlv7")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AADw//f/AAAAAAAAAADw//j/AAAAAAAAAADw//n/AAAAAAAAAADw//r/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAAAAAAAAADw/wEAAAAAAAAAAADw/wIAAAAAAAAAAADw/wMAAAAAAAAAAADw/wQAAAAAAAAAAADw/wUAAAAAAAAAAADw/wYAAAAAAAAAAADw/wcAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAPf/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAADw/wgAAAAAAAAAAADx/wgAAAAAAAAAAADy/wgAAAAAAAAAAADz/wgAAAAAAAAAAAD0/wgAAAAAAAAAAAD1/wgAAAAAAAAAAAD2/wgAAAAAAAAAAAD3/wgAAAAAAAAAAAD4/wgAAAAAAAAAAAD5/wgAAAAAAAAAAAD6/wgAAAAAAAAAAAD7/wgAAAAAAAAAAAD8/wgAAAAAAAAAAAD9/wgAAAAAAAAAAADx//f/AAAAAAAAAADy//f/AAAAAAAAAADz//f/AAAAAAAAAAD0//f/AAAAAAAAAAD1//f/AAAAAAAAAAD2//f/AAAAAAAAAAD3//f/AAAAAAAAAAD4//f/AAAAAAAAAAD5//f/AAAAAAAAAAD6//f/AAAAAAAAAAD7//f/AAAAAAAAAAD8//f/AAAAAAAAAAD9//f/AAAAAAAAAADw//3/AAAAAAAAAAACAPf/AAAAAAAAAAADAPf/AAAAAAAAAAAEAPf/AAAAAAAAAAAFAPf/AAAAAAAAAAAGAPf/AAAAAAAAAAAHAPf/AAAAAAAAAAAIAPf/AAAAAAAAAAAJAPf/AAAAAAAAAAAKAPf/AAAAAAAAAAALAPf/AAAAAAAAAAAMAPf/AAAAAAAAAAANAPf/AAAAAAAAAAAOAPf/AAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAD+/wEAAAABAAAAAAD//wEAAAABAAAAAAAAAAEAAAABAAAAAAABAAEAAAABAAAAAAAPAP3/AAAAAAAAAADv//z/AAAAAAMAAADv//v/AAAAAAMAAADv//r/AAAAAAMAAADv//n/AAAAAAMAAADv//j/AAAAAAMAAADv//f/AAAAAAMAAADv//b/AAAAAAMAAADw//b/AAAAAAMAAADx//b/AAAAAAMAAADx//X/AAAAAAMAAADy//X/AAAAAAMAAADz//X/AAAAAAMAAAD0//X/AAAAAAMAAAD1//X/AAAAAAMAAAD2//X/AAAAAAMAAAD3//X/AAAAAAMAAAD3//b/AAAAAAMAAAD4//b/AAAAAAMAAAD5//b/AAAAAAMAAAD6//b/AAAAAAMAAAD7//b/AAAAAAMAAAD8//b/AAAAAAMAAAD8//X/AAAAAAMAAAD7//X/AAAAAAMAAAD6//X/AAAAAAMAAAD5//X/AAAAAAMAAAD4//X/AAAAAAMAAAD2//b/AAAAAAMAAAD1//b/AAAAAAMAAAD0//b/AAAAAAMAAADz//b/AAAAAAMAAADy//b/AAAAAAMAAADw//X/AAAAAAMAAADv//X/AAAAAAMAAADu//X/AAAAAAMAAADu//b/AAAAAAMAAADu//f/AAAAAAMAAADu//j/AAAAAAMAAADu//n/AAAAAAMAAADu//r/AAAAAAMAAADu//v/AAAAAAMAAADu//z/AAAAAAMAAADv/wEAAAAAAAAAAADu/wEAAAAAAAAAAADu/wIAAAAAAAMAAADu/wMAAAAAAAMAAADu/wQAAAAAAAMAAADu/wUAAAAAAAMAAADu/wYAAAAAAAMAAADu/wcAAAAAAAMAAADu/wgAAAAAAAMAAADv/wgAAAAAAAMAAADv/wcAAAAAAAMAAADv/wYAAAAAAAMAAADv/wUAAAAAAAMAAADv/wQAAAAAAAMAAADv/wMAAAAAAAMAAADv/wIAAAAAAAMAAAD9//b/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAMAAAAEAPb/AAAAAAMAAAAFAPb/AAAAAAMAAAAGAPb/AAAAAAMAAAAHAPb/AAAAAAMAAAAIAPb/AAAAAAMAAAAJAPb/AAAAAAMAAAAKAPb/AAAAAAMAAAALAPb/AAAAAAMAAAAMAPb/AAAAAAMAAAANAPb/AAAAAAMAAAAOAPX/AAAAAAMAAAAPAPX/AAAAAAMAAAAPAPb/AAAAAAMAAAAOAPb/AAAAAAMAAAANAPX/AAAAAAMAAAAMAPX/AAAAAAMAAAALAPX/AAAAAAMAAAAKAPX/AAAAAAMAAAAJAPX/AAAAAAMAAAAIAPX/AAAAAAMAAAAHAPX/AAAAAAMAAAAGAPX/AAAAAAMAAAAFAPX/AAAAAAMAAAAEAPX/AAAAAAMAAAADAPX/AAAAAAMAAAACAPX/AAAAAAAAAAD9//X/AAAAAAAAAAAQAPX/AAAAAAMAAAARAPX/AAAAAAMAAAARAPb/AAAAAAMAAAARAPf/AAAAAAMAAAARAPj/AAAAAAMAAAARAPv/AAAAAAMAAAARAPz/AAAAAAMAAAARAP3/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAPz/AAAAAAMAAAAQAPv/AAAAAAMAAAAQAPr/AAAAAAMAAAAQAPn/AAAAAAMAAAAQAPj/AAAAAAMAAAAQAPf/AAAAAAMAAAAQAPb/AAAAAAMAAAARAPn/AAAAAAMAAAARAPr/AAAAAAMAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAARAAQAAAAAAAMAAAARAAMAAAAAAAMAAAARAAIAAAAAAAMAAAARAAUAAAAAAAMAAAARAAYAAAAAAAMAAAARAAcAAAAAAAMAAAARAAgAAAAAAAMAAAAQAAgAAAAAAAMAAAAQAAcAAAAAAAMAAAAQAAYAAAAAAAMAAAAQAAUAAAAAAAMAAAAQAAQAAAAAAAMAAAAQAAMAAAAAAAMAAAAQAAIAAAAAAAMAAADu/wkAAAAAAAMAAADv/wkAAAAAAAMAAADw/wkAAAAAAAMAAADx/wkAAAAAAAMAAADy/wkAAAAAAAMAAADz/wkAAAAAAAMAAAD0/wkAAAAAAAMAAAD1/wkAAAAAAAMAAAD3/wkAAAAAAAMAAAD4/wkAAAAAAAMAAAD5/wkAAAAAAAMAAAD6/wkAAAAAAAMAAAD7/wkAAAAAAAMAAAD8/wkAAAAAAAMAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD8/woAAAAAAAMAAAD7/woAAAAAAAMAAAD6/woAAAAAAAMAAAD5/woAAAAAAAMAAAD4/woAAAAAAAMAAAD3/woAAAAAAAMAAAD2/woAAAAAAAMAAAD1/woAAAAAAAMAAAD0/woAAAAAAAMAAADz/woAAAAAAAMAAADy/woAAAAAAAMAAADx/woAAAAAAAMAAADw/woAAAAAAAMAAADv/woAAAAAAAMAAADu/woAAAAAAAMAAAD2/wkAAAAAAAMAAAAQAAkAAAAAAAMAAAARAAkAAAAAAAMAAAAPAAkAAAAAAAMAAAAOAAkAAAAAAAMAAAANAAkAAAAAAAMAAAAMAAkAAAAAAAMAAAALAAkAAAAAAAMAAAAKAAkAAAAAAAMAAAAJAAkAAAAAAAMAAAAIAAkAAAAAAAMAAAAHAAkAAAAAAAMAAAAGAAkAAAAAAAMAAAAFAAkAAAAAAAMAAAAEAAkAAAAAAAMAAAADAAkAAAAAAAMAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAMAAAAEAAoAAAAAAAMAAAAFAAoAAAAAAAMAAAAGAAoAAAAAAAMAAAAHAAoAAAAAAAMAAAAIAAoAAAAAAAMAAAAJAAoAAAAAAAMAAAAKAAoAAAAAAAMAAAALAAoAAAAAAAMAAAAMAAoAAAAAAAMAAAARAAoAAAAAAAMAAAAQAAoAAAAAAAMAAAAPAAoAAAAAAAMAAAAOAAoAAAAAAAMAAAANAAoAAAAAAAMAAADv//3/AAAAAAAAAADu//3/AAAAAAAAAAD2/wcAAAAAAAAAAAD2/wYAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wYAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAADz/wMAAAACAAAAAAAMAAMAAAACAAAAAAD5////AAABAAAAAAD4////AAABAAAAAAD3////AAABAAAAAAAGAP//AAABAAAAAAAHAP//AAABAAAAAAAIAP//AAABAAAAAAALAAMAAAACAAAAAAD0/wMAAAACAAAAAAA=")
tile_set = SubResource("TileSet_y6kgj")

[node name="Area2D_left" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Area2D_left"]
position = Vector2(0, -1.6)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_mnlv7")

[node name="Area2D_right" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_right"]
position = Vector2(563.2, -1.6)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_iitqo")

[node name="Area2D_bottom" type="Area2D" parent="."]
position = Vector2(2, 800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2(-2, 8)
shape = SubResource("RectangleShape2D_3s558")

[node name="Area2D_cameraRoom" parent="." instance=ExtResource("2_5xyui")]
visible = false

[node name="Sprite2D_block_Left" type="Sprite2D" parent="."]
position = Vector2(-1402.5, -42.5)
scale = Vector2(1.99219, 1.99219)
texture = ExtResource("3_y6kgj")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Left"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Left/StaticBody2D"]
shape = SubResource("RectangleShape2D_fjr4h")

[node name="Sprite2D_block_Right" type="Sprite2D" parent="."]
position = Vector2(1408, -42)
scale = Vector2(1.99219, 1.99219)
texture = ExtResource("3_y6kgj")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Right"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Right/StaticBody2D"]
shape = SubResource("RectangleShape2D_fjr4h")

[node name="Sprite2D_block_Bottom" type="Sprite2D" parent="."]
position = Vector2(-2.27374e-13, 808)
scale = Vector2(2.75, 1.99609)
texture = ExtResource("3_y6kgj")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Bottom"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Bottom/StaticBody2D"]
position = Vector2(3.8147e-06, -0.0747681)
shape = SubResource("RectangleShape2D_fjr4h")

[node name="Sprite2D_block_Top" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, -808)
scale = Vector2(2.75, 1.99609)
texture = ExtResource("3_y6kgj")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Top/StaticBody2D"]
position = Vector2(-6.93581e-07, -9.15527e-05)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_1tt6n")
